2020-09-10  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceread.cpp (geneCSdata2): updated
	dont insert thermal point in the charged particle reaction case

2020-09-08  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/masstable.cpp (qvalue): bug fixed
	MT50 for a charged particle reaction case missing

2020-08-26  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/endflib.cpp (ENDFExtract): updated
	remove \r when the input is a DOS file

2020-07-12  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/endflib.cpp (ENDFExtract): updated
	non-ASCII character scanner added

2020-07-10  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/decetable34.cpp (DeceTableMF34): updated
	* source/decetable33.cpp (DeceTableMF33NILB5): bug fixed
	LB=5 assymmetric matrix case added

2020-07-09  KAWANO Toshihiko  <kawano@lanl.gov>

        * source/decemod6.cpp (DeceBoundCorrect): updated
        automatically adjust energy range in MF6 when MF3's range is different
        DeceDuplicatePoint() obsolete, removed

2020-07-02  KAWANO Toshihiko  <kawano@lanl.gov>

        * source/decepoint.cpp (modpoint): new function
        replace one data point in MF3 by input

2020-07-01  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/endflib.cpp (ENDFDelExp): updated
	M. Paris' cp2020 branch, which fixes too small number problems, merged 

2020-06-29  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceread.cpp (geneCSdata2): modified
	to avoid round-off error at thermal energy when this data point is given in input

2020-06-24  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceread.cpp (geneCSdata2): bug fixed
	data reading for no-resonance region case fixed
	there are more modifications to this file

2020-06-19  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/dece.cpp: updated
	version 1.2.4 Olivine

	* source/decetable34.cpp (DeceTableMF34): modified
	print covariance matrix instead of correlation when different L-values are given
	still not sure if they are symmetric
