@@ -79,6 +79,7 @@ double gfrGetOnePoint   (ifstream *, ENDFDict *, const double);
 void   gfrPtCross       (ENDFDict *, ENDF **, double, double, double);
 void   gfrAngDist       (ENDFDict *, ENDF **, double, double, double);
 void   gfrAngDistSmooth (ENDFDict *, ENDF **, double);
+void   gfrSmatrixElement(ENDFDict *, ENDF **);
 
 /*** deceprocpointwise.cpp */
 void   DeceGeneratePointwise (ENDFDict *, ENDF **);
