@@ -1,3 +1,11 @@
+2020-10-20  KAWANO Toshihiko  <kawano@lanl.gov>
+
+	* source/gfr.cpp (gfrPrintCrossSection): new function
+	move all printing parts to this function
+	
+	* source/gfr.cpp (gfrSmatrixElement): new function
+	print scattering matrix element
+
 2020-09-10  KAWANO Toshihiko  <kawano@lanl.gov>
 
 	* source/deceread.cpp (geneCSdata2): updated
